# discovery

./: README.md
ejemplos/WinFormsAndVB6/: README.md  README.txt
ejemplos/WinFormsAndVB6/AspClassic/: default.asp
ejemplos/WinFormsAndVB6/AspClassic/inc/: db.inc
ejemplos/WinFormsAndVB6/AspNetWeb/: Default.aspx  Default.aspx.cs  Site.Master  Site.Master.cs  Web.config
ejemplos/WinFormsAndVB6/AspNetWeb/Controllers/: HomeController.cs
ejemplos/WinFormsAndVB6/AspNetWeb/Controls/: ProductList.ascx  ProductList.ascx.cs
ejemplos/WinFormsAndVB6/AspNetWeb/Handlers/: Download.ashx  Download.ashx.cs
ejemplos/WinFormsAndVB6/AspNetWeb/Reports/: Legacy.rpt
ejemplos/WinFormsAndVB6/AspNetWeb/Services/: Legacy.asmx  Legacy.asmx.cs  Orders.svc  Orders.svc.cs
ejemplos/WinFormsAndVB6/SQL/: CreateSchema.sql
ejemplos/WinFormsAndVB6/tmp/: transform_summary.json
salidas/VB6SalesApp/: dashboard.html  graph.graphml  graph.json  graph_edges.json  report.json
source_discovery/: Cargo.toml  README.md
source_discovery/cli/: Cargo.toml
source_discovery/cli/src/: main.rs
source_discovery/core/: Cargo.toml
source_discovery/core/src/: ast.rs  graph.rs  lib.rs  models.rs  plugins.rs  rule_dsl.rs  rules.rs  scan.rs
source_discovery/db/: Cargo.toml
source_discovery/db/src/: lib.rs
source_discovery/report/: Cargo.toml
source_discovery/report/src/: lib.rs
source_discovery_reporter/: run_vb6salesapp.cmd
source_discovery_reporter/discovery_reporter/: Cargo.toml  README.md  make_dashboard.cmd
source_discovery_reporter/discovery_reporter/src/: main.rs
(+46 files in other folders)
