[package]
name = "db"
version = "0.8.1"
edition = "2021"

[features]
# Para evitar problemas de TLS/SQL en entornos sin SQL Server, el soporte real es opcional.
sqlserver = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cuando quieras habilitar SQL Server real, agrega tiberius + tokio y lógica real.
# tiberius = { version = "0.12", default-features = false, features = ["rustls"], optional = true }
# tokio = { version = "1", features = ["full"], optional = true }
